Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "prettier": "^3.6.2"
