--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.12.2",
   "dependencies": {
+    "gsap": "~3.12.7",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
